Try fix spacing again

--- a/css/site.css
+++ b/css/site.css
@@ -147,13 +147,17 @@ header .subtitle {
 /* Main Section */
 section.main-content {
   background-color: var(--bg);
-  padding: 36px 0 32px;
+  padding: 36px 0 24px;
   margin-top: 0;
   color: var(--text);
 }
 
+section#about.main-content {
+  padding-bottom: 20px;
+}
+
 section#projects.main-content {
-  padding-top: 24px;
+  padding-top: 16px;
 }
 
 section.main-content h2 {
